<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/shop"
        android:title="Shop"
        android:icon="@drawable/shop"/>
    <item
        android:id="@+id/explore"
        android:title="Explore"
        android:icon="@drawable/explore"/>
    <item
        android:id="@+id/cart"
        android:title="Cart"
        android:icon="@drawable/cart"/>
    <item
        android:id="@+id/favourite"
        android:title="Favourite"
        android:icon="@drawable/favourite"/>
    <item
        android:id="@+id/account"
        android:title="Account"
        android:icon="@drawable/account"/>
</menu>