<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Shop">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/bar_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <GridView
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            android:horizontalSpacing="15dp"
            android:numColumns="2"
            android:verticalSpacing="20dp" />
    </LinearLayout>

</FrameLayout>